--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
     </header>
-
+<!-- Start of echowavecommunications Zendesk Widget script --><script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=92984fed-bad2-4870-8cab-1a6da8b8ba2c"> </script><!-- End of echowavecommunications Zendesk Widget script -->
     <section id="services">
         <div class="container">
             <h2>Our Services</h2>
