--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <h3>Technical Support</h3>
                 <p>Round-the-clock IT support for all your business needs.</p>
             </div>
-          <!--  <div class="service-box">
+            <div class="service-box">
                 <h3>Network Setup</h3>
-                <p>Professional network installations and troubleshooting.</p>
+                <p>Professional network installations and troubleshooting Virtually.</p>
             </div>
             <div class="service-box">
                 <h3>Data Backup & Recovery</h3>
-                <p>Ensure your data is safe and recoverable in case of emergencies.</p>
+                <p>Ensure your data is safe and recoverable in case of emergencies. We can provide storage for important photos</p>
             </div>
-        </div>-->
+        </div>
     </section>
 
     <section id="about">
