--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
         </div>
     </section>
 
-        </div>
-    </section>
+    
 
     <footer>
-        <!--<div class="container">
-            <p>&copy; 2024 Echo Wave Communication. All rights reserved.</p>
-        </div>-->
+        <div class="container">
+            <p>&copy; 2024 Echo Wave Communication.</p>
+        </div>
     </footer>
 </body>
 </html>
